--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost/postgres
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://localhost/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/websy
+spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
