--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+#postgreSQL datasource
 #spring.datasource.url=jdbc:postgresql://localhost/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=root
 #spring.jpa.generate-ddl=true
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/websy
+#mysql datasource
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/websy?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
