--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,24 @@
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #mysql datasource
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/websy?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
 
 spring.freemarker.expose-request-attributes=true
 
 upload.path=/uploads
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=khabib.adbul@gmail.com
+spring.mail.password=abdula32
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.debug=true
 
