--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,7 @@
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #mysql datasource
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/websy?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
@@ -16,8 +15,10 @@ spring.jpa.show-sql=true
 
 spring.freemarker.expose-request-attributes=true
 
+# downloads files
 upload.path=/uploads
 
+#email settings to gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.username=khabib.adbul@gmail.com
 spring.mail.password=abdula32
