Added reCAPTCHA into registration form and created rememberMe function for saving sessions in database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=true
 
+recaptcha.secret = 6LdtwYUUAAAAACRPKY3M3aYvtyKRIdbOsXm6M-c3
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
