--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,7 +26,7 @@ spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=false
+mail.debug=true
 
 recaptcha.secret = 6LdtwYUUAAAAACRPKY3M3aYvtyKRIdbOsXm6M-c3
 
