Prepared deploy script

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,3 +32,5 @@ recaptcha.secret = 6LdtwYUUAAAAACRPKY3M3aYvtyKRIdbOsXm6M-c3
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+
+hostname = localhost:8080
