--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 spring.freemarker.expose-request-attributes=true
 
 # downloads files
-upload.path=/uploads
+upload.path=/home/d5enemy/uploads
 
 #email settings to gmail
 spring.mail.host=smtp.gmail.com
@@ -32,3 +32,5 @@ recaptcha.secret = 6LdtwYUUAAAAACRPKY3M3aYvtyKRIdbOsXm6M-c3
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+
+hostname = 35.204.36.103
